--- a/css/danh-muc-sp.css
+++ b/css/danh-muc-sp.css
@@ -3,10 +3,11 @@
 .filter{
     display: flex;
     justify-content: center;
-    margin-top: 25px;
+    margin-top: 21px;
   }
 .filter div{
     margin-right: 10px;
+    margin-bottom: 10px;
   }
 .filter button{
     cursor: pointer;
@@ -21,12 +22,13 @@
   }
 .search-filter{
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
   }
 .search-filter input{
     padding: 8px 7px;
-    border-radius: 7px;
-    margin-bottom: 20px;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    border-width: thin;
   }
 
 .delete-filter-container a button:hover{
