--- a/css/index.css
+++ b/css/index.css
@@ -202,6 +202,12 @@ img {vertical-align: middle;}
     height: 323px;
   }
 
+.card:hover{
+  transform: scale(1.02);
+  transition-duration: 0.3s;
+  cursor: pointer;
+}
+
 .card img{
     margin-top: 20px;
     max-width: 192px;
